# Threelacha_airflow_dbt

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template-custom.md  issue_template.md
.github/workflows/: cd-test.yml  cd.yml  ci.yml
airflow/config/: airflow.cfg
airflow/dags/: load_s3_gold_to_rds_mart.py  master_api10_pipeline.py  master_api17_pipline.py  master_pipeline.py  master_schema_resister.py  raw_api10_collect_daily.py  raw_api17_collect_backfill.py  raw_api17_collect_daily.py  raw_api1_collect_daily.py  run_dbt_transform_gold.py  schema_register_silver_all_athena.py  schema_register_silver_api10.py  schema_register_silver_api13.py  schema_register_silver_api17.py  schema_register_silver_api1_athena.py  silver_api10_transform.py  silver_api10_transform_daily.py  silver_api17_transform_daily.py  silver_api1_transform_daily.py  test_athena_catalog_scan.py  test_athena_conn.py  test_minio_conn.py  test_storage_conn.py
airflow/plugins/: api_caller_utils.py  connection_utils.py  country_code.json  daily_collector.py  eco_collector.py  mapping_utils.py  metadata_loader_utils.py  preprocessing.py  read_utils.py  s3_uploader_utils.py  upload_utils.py
airflow/plugins/config/: constants.py
airflow/plugins/metadata/: __init__.py  category_code.json  param_tree.json  product_cls_code.json  retail_country_code.json
config/: airflow.cfg
dbt/: Dockerfile  profiles.yml
dbt/Threelacha/: dbt_project.yml  profiles.yml
dbt/Threelacha/macros/: drop_test_gold.sql
dbt/Threelacha/models/: sources.yml
dbt/Threelacha/models/gold/: schema.yml  (+20 more)
dbt/Threelacha/seeds/: country_coordinates.csv  schema.yml  seasonal_info.csv
dbt/Threelacha/tests/: test_api10_silver_gold.sql
docs/: airflow_connections.md
(+7 files in other folders)
