[project]
name = "threelacha-airflow-dbt"
version = "0.1.0"
description = "Airflow + dbt 기반 KAMIS 데이터 운영 파이프라인"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "boto3>=1.30.0",
    "typing-extensions>=4.12.0",

    # Data
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pyarrow>=22.0.0",
    "duckdb>=1.4.2",
    "s3fs>=2024.6.1",

    # Airflow (CI 용도)
    "apache-airflow==3.1.3",
    "SQLAlchemy>=2.0.36",

    # dbt (CI compile 용도)
    "dbt-core>=1.7.0",

    # Dev / Tooling
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
]

# -------------------------------------------------
# Ruff (Lint 중심, 운영 친화 설정)
# -------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "airflow/logs",
    "dbt/target",
    "dbt/logs",
]

output-format = "grouped"
show-fixes = true

[tool.ruff.lint]
# 운영 레포에서는 "버그 + 안정성" 위주 검증
select = [
    "F",      # pyflakes (미사용 import, NameError 등)
    "E", "W", # 기본 스타일 에러
    "B",      # bugbear (실제 버그 가능성)
    "I",      # import 정렬
]

ignore = [
    "E501",   # line length
    "B008",   # default arg callable (Airflow 패턴 허용)
]

fixable = ["ALL"]

# -------------------------------------------------
# isort (Airflow/DAG 가독성)
# -------------------------------------------------
[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

# -------------------------------------------------
# Format (자동 적용 X, 선택)
# -------------------------------------------------
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
